fixed shifting button text on hover

--- a/src/landing_page.scss
+++ b/src/landing_page.scss
@@ -113,7 +113,7 @@
             box-shadow: 2px 2px 1.5rem #a9a9be;
             color: #4444c5;
 
-            scale: 1.15;
+            scale: 1.2;
         }
 
         .image_button {
